--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "@supabase/supabase-js": "^2.86.0",
     "archiver": "^7.0.1",
     "bcrypt": "^5.1.1",
@@ -21,6 +22,7 @@
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "file-saver": "^2.0.5",
+    "googleapis": "^168.0.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.3",
