--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "import:rnc": "node scripts/importRncRegistry.js"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +25,7 @@
     "file-saver": "^2.0.5",
     "googleapis": "^168.0.0",
     "http-errors": "^2.0.0",
+    "iconv-lite": "^0.7.1",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
